<resources>
    <string name="app_name">BLEscan</string>
    <string name="action_settings">Settings</string>
    <string name="notification_text">Servicio BLE activo</string>
    <string name="status_offline">Off</string>
    <string name="status_online">On</string>
    <string name="status">Status: </string>
    <string name="bluetooth_status">Bluetooth status</string>
    <string name="status_turning_off">Turning off</string>
    <string name="status_turning_on">Turning on</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address:</string>
    <string name="connected">Connected</string>
    <string name="characteristic_value">Characteristic value:</string>
    <string name="new_value">New value</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="action_log">Log</string>
</resources>
